--- a/dashboard.html
+++ b/dashboard.html
@@ -4,174 +4,75 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>FixCity AI Dashboard</title>
+  <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-    }
-
     body {
       font-family: 'Inter', sans-serif;
-      background: #f7f9fc;
-      color: #222;
-      transition: background 0.3s, color 0.3s;
-    }
-
-    header {
-      background-color: #222;
-      color: #fff;
-      padding: 20px 30px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.15);
-    }
-
-    header h1 {
-      font-size: 24px;
-      font-weight: 700;
-    }
-
-    header button {
-      background-color: #00cec9;
-      color: #fff;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 10px;
-      font-size: 14px;
-      cursor: pointer;
-      transition: all 0.3s;
-    }
-
-    header button:hover {
-      background-color: #00b894;
-      transform: scale(1.05);
-    }
-
-    main {
-      padding: 30px;
-    }
-
-    .filters {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      margin-bottom: 30px;
-    }
-
-    .filters input,
-    .filters select {
-      padding: 12px 16px;
-      border: 1px solid #ccc;
-      border-radius: 12px;
-      font-size: 14px;
-      outline: none;
-      background: #fff;
-      transition: 0.3s ease;
-      box-shadow: 0 0 0 transparent;
-    }
-
-    .filters input:focus,
-    .filters select:focus {
-      border-color: #00cec9;
-      box-shadow: 0 0 0 4px rgba(0, 206, 201, 0.2);
-    }
-
-    .report-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-      gap: 25px;
-    }
-
-    .report-card {
-      background: #ffffff;
-      padding: 20px;
-      border-radius: 16px;
-      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
-      transition: transform 0.3s, box-shadow 0.3s;
-    }
-
-    .report-card:hover {
-      transform: translateY(-5px) scale(1.01);
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
-    }
-
-    .report-card h3 {
-      font-size: 18px;
-      margin-bottom: 10px;
-      color: #111;
-    }
-
-    .report-card p {
-      font-size: 14px;
-      margin-bottom: 6px;
-      color: #555;
-    }
-
-    .report-card .status {
-      font-weight: 600;
-      padding: 6px 10px;
-      border-radius: 6px;
-      display: inline-block;
-      margin-top: 10px;
-    }
-
-    .status-pending {
-      background-color: #ffeaa7;
-      color: #e17055;
-    }
-
-    .status-fixed {
-      background-color: #dff9fb;
-      color: #0984e3;
-    }
-
-    .status-inprogress {
-      background-color: #fab1a0;
-      color: #d63031;
-    }
-
-    footer {
-      text-align: center;
-      padding: 20px;
-      font-size: 14px;
-      color: #aaa;
-      margin-top: 40px;
-    }
-
-    @media screen and (max-width: 768px) {
-      header h1 {
-        font-size: 20px;
-      }
-      .filters {
-        flex-direction: column;
-      }
-      .filters input,
-      .filters select {
-        width: 100%;
-      }
     }
   </style>
 </head>
-<body>
+<body class="bg-gray-50 text-gray-800">
+  <!-- Navbar -->
+  <nav class="bg-white shadow-md sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="flex justify-between h-16 items-center">
+        <a href="index.html" class="text-2xl font-bold text-teal-600 hover:text-teal-700 transition duration-200">FixCity AI</a>
+        <div class="hidden md:flex space-x-6 items-center">
+          <a href="index.html" class="text-gray-700 hover:text-teal-600 transition">Home</a>
+          <a href="features.html" class="text-gray-700 hover:text-teal-600 transition">Features</a>
+          <a href="report.html" class="text-gray-700 hover:text-teal-600 transition">Report Issue</a>
+          <a href="dashboard.html" class="text-teal-600 font-semibold border-b-2 border-teal-600">Dashboard</a>
+          <a href="about.html" class="text-gray-700 hover:text-teal-600 transition">About</a>
+          <a href="login.html" class="bg-teal-500 text-white px-4 py-2 rounded-lg hover:bg-teal-600 transition">Login</a>
+        </div>
+        <div class="md:hidden">
+          <!-- Mobile menu button -->
+          <button id="mobileMenuButton" class="text-gray-600 hover:text-teal-600 focus:outline-none focus:text-teal-600">
+            <svg class="h-6 w-6" fill="none" stroke="currentColor" stroke-width="2"
+              viewBox="0 0 24 24" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M4 6h16M4 12h16M4 18h16"/>
+            </svg>
+          </button>
+        </div>
+      </div>
+    </div>
 
-  <header>
-    <h1>FixCity AI Dashboard</h1>
-    <button onclick="alert('Logged out!')">Logout</button>
+    <!-- Mobile Menu -->
+    <div id="mobileMenu" class="hidden md:hidden px-4 pb-4">
+      <a href="index.html" class="block py-2 text-gray-700 hover:text-teal-600">Home</a>
+      <a href="features.html" class="block py-2 text-gray-700 hover:text-teal-600">Features</a>
+      <a href="report.html" class="block py-2 text-gray-700 hover:text-teal-600">Report Issue</a>
+      <a href="dashboard.html" class="block py-2 text-teal-600 font-semibold">Dashboard</a>
+      <a href="about.html" class="block py-2 text-gray-700 hover:text-teal-600">About</a>
+      <a href="login.html" class="block py-2 text-white bg-teal-500 rounded-lg text-center hover:bg-teal-600">Login</a>
+    </div>
+  </nav>
+
+  <script>
+    document.getElementById('mobileMenuButton').addEventListener('click', () => {
+      const menu = document.getElementById('mobileMenu');
+      menu.classList.toggle('hidden');
+    });
+  </script>
+
+  <!-- Header -->
+  <header class="bg-gray-900 text-white px-6 py-4 flex justify-between items-center shadow-md mt-4">
+    <h1 class="text-2xl font-bold">FixCity AI Dashboard</h1>
+    <button onclick="alert('Logged out!')" class="bg-teal-500 hover:bg-teal-600 text-white px-4 py-2 rounded-lg transition">Logout</button>
   </header>
 
-  <main>
-    <section class="filters">
-      <input type="text" id="searchInput" placeholder="Search reports..." />
-      <select id="statusFilter">
+  <!-- Filters -->
+  <main class="p-6">
+    <section class="mb-8 flex flex-wrap gap-4">
+      <input type="text" id="searchInput" placeholder="Search reports..." class="flex-1 min-w-[200px] px-4 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-teal-400" />
+      <select id="statusFilter" class="flex-1 min-w-[200px] px-4 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-teal-400">
         <option value="">Filter by status</option>
         <option value="pending">Pending</option>
         <option value="inprogress">In Progress</option>
         <option value="fixed">Fixed</option>
       </select>
-      <select id="sortBy">
+      <select id="sortBy" class="flex-1 min-w-[200px] px-4 py-2 rounded-lg border border-gray-300 focus:ring-2 focus:ring-teal-400">
         <option value="">Sort by</option>
         <option value="newest">Newest</option>
         <option value="oldest">Oldest</option>
@@ -179,39 +80,35 @@
       </select>
     </section>
 
-    <section class="report-grid">
-      <!-- Card 1 -->
-      <div class="report-card">
-        <h3>Broken Traffic Light</h3>
+    <!-- Reports Grid -->
+    <section class="grid gap-6 md:grid-cols-2 lg:grid-cols-3">
+      <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition-transform hover:-translate-y-1">
+        <h3 class="text-xl font-semibold mb-2">Broken Traffic Light</h3>
         <p><strong>Location:</strong> 5th Avenue & 32nd St</p>
         <p><strong>Date:</strong> May 25, 2025</p>
         <p><strong>Category:</strong> Traffic Signal</p>
-        <span class="status status-pending">Pending</span>
+        <span class="inline-block mt-3 px-3 py-1 rounded-full text-sm font-medium bg-yellow-100 text-yellow-700">Pending</span>
       </div>
 
-      <!-- Card 2 -->
-      <div class="report-card">
-        <h3>Damaged CCTV Camera</h3>
+      <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition-transform hover:-translate-y-1">
+        <h3 class="text-xl font-semibold mb-2">Damaged CCTV Camera</h3>
         <p><strong>Location:</strong> Central Park</p>
         <p><strong>Date:</strong> May 24, 2025</p>
         <p><strong>Category:</strong> Surveillance</p>
-        <span class="status status-inprogress">In Progress</span>
+        <span class="inline-block mt-3 px-3 py-1 rounded-full text-sm font-medium bg-red-100 text-red-700">In Progress</span>
       </div>
 
-      <!-- Card 3 -->
-      <div class="report-card">
-        <h3>Street Light Fixed</h3>
+      <div class="bg-white p-6 rounded-2xl shadow hover:shadow-lg transition-transform hover:-translate-y-1">
+        <h3 class="text-xl font-semibold mb-2">Street Light Fixed</h3>
         <p><strong>Location:</strong> Broadway St</p>
         <p><strong>Date:</strong> May 20, 2025</p>
         <p><strong>Category:</strong> Lighting</p>
-        <span class="status status-fixed">Fixed</span>
+        <span class="inline-block mt-3 px-3 py-1 rounded-full text-sm font-medium bg-blue-100 text-blue-700">Fixed</span>
       </div>
     </section>
   </main>
 
-  <footer>
-    &copy; 2025 FixCity AI. Built for a better public tech future.
-  </footer>
-
+  <!-- Footer -->
+  <footer class="text-center text-sm text-gray-500 py-6">&copy; 2025 FixCity AI. Built for a better public tech future.</footer>
 </body>
 </html>
