--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- INDEX.HTML (advanced homepage) -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,33 +12,54 @@
   <!-- Header -->
   <header class="sticky top-0 z-50 bg-white/90 dark:bg-gray-900/90 shadow px-6 py-4 backdrop-blur flex justify-between items-center">
     <h1 class="text-2xl font-bold text-indigo-600 dark:text-indigo-400">FixCity AI</h1>
-    <nav class="space-x-4">
-      <a href="index.html" class="hover:underline">Home</a>
-      <a href="dashboard.html" class="hover:underline">Dashboard</a>
-      <a href="submit.html" class="hover:underline">Submit</a>
-      <a href="blog.html" class="hover:underline">Blog</a>
-      <a href="community.html" class="hover:underline">Community</a>
-      <a href="features.html" class="hover:underline">Features</a>
-      <a href="AIchatbot.html" class="hover:underline">Chatbot AI</a>
-      <a href="about.html" class="hover:underline">About</a>
-      <a href="terms.html" class="hover:underline">Terms</a>
-      <a href="login.html" class="hover:underline">Login</a>
-      <a href="signup.html" class="hover:underline">Sign UP</a>
+    <nav class="flex flex-wrap gap-2">
+      <a href="index.html" class="nav-link">Home</a>
+      <a href="dashboard.html" class="nav-link">Dashboard</a>
+      <a href="submit.html" class="nav-link">Submit</a>
+      <a href="blog.html" class="nav-link">Blog</a>
+      <a href="community.html" class="nav-link">Community</a>
+      <a href="features.html" class="nav-link">Features</a>
+      <a href="AIchatbot.html" class="nav-link">Chatbot AI</a>
+      <a href="about.html" class="nav-link">About</a>
+      <a href="terms.html" class="nav-link">Terms</a>
+      <a href="login.html" class="nav-link">Login</a>
+      <a href="signup.html" class="nav-link">Sign Up</a>
     </nav>
     <button id="toggleMode" class="ml-4 px-3 py-1 rounded-full bg-gray-200 dark:bg-gray-700 text-sm">Toggle Mode</button>
   </header>
 
   <!-- Hero Section -->
-  <section class="relative min-h-screen flex flex-col justify-center items-center text-center px-6">
-    <h2 class="text-4xl md:text-6xl font-bold leading-tight mb-6">Empowering Smarter Cities with <span class="text-indigo-600 dark:text-indigo-400">AI</span></h2>
+  <section class="relative min-h-screen flex flex-col justify-center items-center text-center px-6 animate-fadeIn">
+    <h2 class="text-4xl md:text-6xl font-bold leading-tight mb-6 animate-fadeInDown">Empowering Smarter Cities with <span class="text-indigo-600 dark:text-indigo-400">AI</span></h2>
     <p class="max-w-xl text-lg mb-8">Track, Report, and Engage in the Transformation of Urban Infrastructure.</p>
     <a href="features.html" class="bg-indigo-600 text-white px-6 py-3 rounded-full hover:bg-indigo-700 transition-all duration-300">Explore Features</a>
-    <!-- Optional: Add Lottie or SVG/GSAP animation here -->
     <div class="absolute bottom-10 animate-bounce text-2xl text-gray-400">↓</div>
   </section>
 
- 
- 
+  <!-- Features Section -->
+  <section class="py-20 px-6">
+    <h3 class="text-3xl font-bold text-center mb-12">Platform Highlights</h3>
+    <div class="grid md:grid-cols-3 gap-6">
+      <div class="card-link">Real-Time Issue Reporting</div>
+      <div class="card-link">AI-Powered Analysis</div>
+      <div class="card-link">Citizen Engagement</div>
+    </div>
+  </section>
+
+  <!-- Testimonials Section -->
+  <section class="py-20 bg-indigo-50 dark:bg-gray-800 px-6">
+    <h3 class="text-3xl font-bold text-center mb-12">What People Are Saying</h3>
+    <div class="grid md:grid-cols-2 gap-8">
+      <div class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow-md">
+        <p class="italic mb-4">“FixCity AI made it so easy to report potholes in my area. The city responded within a week!”</p>
+        <p class="font-semibold">– Priya M., Resident</p>
+      </div>
+      <div class="bg-white dark:bg-gray-700 p-6 rounded-lg shadow-md">
+        <p class="italic mb-4">“This platform helps us allocate maintenance resources more efficiently using real data.”</p>
+        <p class="font-semibold">– Rajeev S., City Planner</p>
+      </div>
+    </div>
+  </section>
 
   <!-- Floating Chatbot Button -->
   <button id="chatbotToggle" class="fixed bottom-6 right-6 bg-white dark:bg-gray-700 p-3 rounded-full shadow-lg backdrop-blur z-50">
@@ -81,6 +101,19 @@
   </script>
 
   <style>
+    .nav-link {
+      display: inline-block;
+      padding: 0.4rem 0.75rem;
+      background: rgba(99, 102, 241, 0.1);
+      border-radius: 0.5rem;
+      transition: all 0.3s ease;
+      font-weight: 500;
+    }
+    .nav-link:hover {
+      background: rgba(99, 102, 241, 0.2);
+      transform: translateY(-2px) scale(1.05);
+      color: #6366f1;
+    }
     .card-link {
       display: flex;
       align-items: center;
@@ -96,6 +129,20 @@
     .card-link:hover {
       transform: scale(1.05);
       background: linear-gradient(135deg, #a5b4fc, #7dd3fc);
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+    @keyframes fadeInDown {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+    .animate-fadeIn {
+      animation: fadeIn 1s ease forwards;
+    }
+    .animate-fadeInDown {
+      animation: fadeInDown 1s ease forwards;
     }
   </style>
 </body>
