--- a/signup.html
+++ b/signup.html
@@ -1,58 +1,89 @@
 <!DOCTYPE html>
 <html lang="en" class="dark">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sign Up – FixCity AI</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(20px) scale(0.98);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0) scale(1);
+      }
+    }
+
+    .animate-fadeInUp {
+      animation: fadeInUp 0.6s ease-out forwards;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+    }
+  </style>
   <script>
     function handleSignup(event) {
       event.preventDefault();
-      // In a real app, you'd validate and send data to backend here
-      window.location.href = 'index.html'; // Redirect to homepage
+      // Simulate success and redirect
+      alert("✅ Account created successfully!");
+      window.location.href = 'index.html';
     }
   </script>
 </head>
-<body class="bg-gradient-to-br from-sky-100 to-indigo-200 dark:from-gray-900 dark:to-gray-800 text-gray-900 dark:text-white">
-  <header class="sticky top-0 z-50 bg-white/90 dark:bg-gray-900/90 shadow px-6 py-4 backdrop-blur flex justify-between items-center">
+<body class="bg-gradient-to-tr from-sky-50 via-indigo-100 to-purple-100 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900 text-gray-900 dark:text-white min-h-screen flex flex-col">
+
+  <!-- Header -->
+  <header class="sticky top-0 z-50 bg-white/80 dark:bg-gray-900/90 shadow px-6 py-4 backdrop-blur flex justify-between items-center">
     <h1 class="text-2xl font-bold text-indigo-600 dark:text-indigo-400">FixCity AI</h1>
-    <nav class="space-x-4">
+    <nav class="space-x-4 text-sm font-medium">
       <a href="index.html" class="hover:underline">Home</a>
       <a href="features.html" class="hover:underline">Features</a>
       <a href="dashboard.html" class="hover:underline">Dashboard</a>
       <a href="submit.html" class="hover:underline">Submit</a>
       <a href="community.html" class="hover:underline">Community</a>
-      <a href="login.html" class="hover:underline">Login</a>
+      <a href="login.html" class="text-indigo-600 dark:text-indigo-400 hover:underline">Login</a>
     </nav>
   </header>
 
-  <main class="flex justify-center items-center min-h-screen px-4 py-12">
-    <div class="w-full max-w-lg bg-white dark:bg-gray-900 rounded-2xl shadow-2xl p-10">
-      <h2 class="text-3xl font-bold text-center text-indigo-700 dark:text-indigo-400 mb-6">Create Your Account</h2>
-      <form class="space-y-6" onsubmit="handleSignup(event)">
+  <!-- Main Sign Up Form -->
+  <main class="flex-grow flex items-center justify-center px-6 py-12">
+    <div class="w-full max-w-lg bg-white dark:bg-gray-900 rounded-2xl shadow-xl p-10 animate-fadeInUp">
+      <h2 class="text-3xl font-extrabold text-center text-indigo-700 dark:text-indigo-400 mb-6">Create Your Account</h2>
+      <form class="space-y-5" onsubmit="handleSignup(event)">
         <div>
-          <label class="block mb-1 font-medium">Full Name</label>
-          <input type="text" required class="w-full px-4 py-2 rounded-lg border dark:border-gray-600 dark:bg-gray-800" placeholder="John Doe" />
+          <label class="block text-sm font-medium mb-1">Full Name</label>
+          <input type="text" required placeholder="John Doe" class="w-full px-4 py-2 rounded-md border border-gray-300 dark:border-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-white focus:ring-2 focus:ring-indigo-500 focus:outline-none transition duration-200" />
         </div>
         <div>
-          <label class="block mb-1 font-medium">Email Address</label>
-          <input type="email" required class="w-full px-4 py-2 rounded-lg border dark:border-gray-600 dark:bg-gray-800" placeholder="you@example.com" />
+          <label class="block text-sm font-medium mb-1">Email Address</label>
+          <input type="email" required placeholder="you@example.com" class="w-full px-4 py-2 rounded-md border border-gray-300 dark:border-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-white focus:ring-2 focus:ring-indigo-500 focus:outline-none transition duration-200" />
         </div>
         <div>
-          <label class="block mb-1 font-medium">Password</label>
-          <input type="password" required class="w-full px-4 py-2 rounded-lg border dark:border-gray-600 dark:bg-gray-800" placeholder="••••••••" />
+          <label class="block text-sm font-medium mb-1">Password</label>
+          <input type="password" required placeholder="••••••••" class="w-full px-4 py-2 rounded-md border border-gray-300 dark:border-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-white focus:ring-2 focus:ring-indigo-500 focus:outline-none transition duration-200" />
         </div>
         <div>
-          <label class="block mb-1 font-medium">Confirm Password</label>
-          <input type="password" required class="w-full px-4 py-2 rounded-lg border dark:border-gray-600 dark:bg-gray-800" placeholder="••••••••" />
+          <label class="block text-sm font-medium mb-1">Confirm Password</label>
+          <input type="password" required placeholder="••••••••" class="w-full px-4 py-2 rounded-md border border-gray-300 dark:border-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-white focus:ring-2 focus:ring-indigo-500 focus:outline-none transition duration-200" />
         </div>
-        <button type="submit" class="w-full py-3 bg-indigo-600 hover:bg-indigo-700 text-white font-semibold rounded-lg shadow transition">Sign Up</button>
+        <button type="submit" class="w-full py-3 bg-indigo-600 hover:bg-indigo-700 text-white font-semibold rounded-lg shadow-lg transition duration-300">
+          Sign Up
+        </button>
       </form>
       <p class="text-sm text-center mt-6 text-gray-600 dark:text-gray-400">
         Already have an account?
-        <a href="login.html" class="text-indigo-500 hover:underline">Log in here</a>
+        <a href="login.html" class="text-indigo-600 hover:underline">Log in here</a>
       </p>
     </div>
   </main>
+
+  <!-- Optional Footer -->
+  <footer class="text-center text-xs text-gray-500 dark:text-gray-600 pb-4 mt-4">
+    &copy; 2025 FixCity AI. All rights reserved.
+  </footer>
 </body>
 </html>
