--- a/signup.html
+++ b/signup.html
@@ -9,26 +9,27 @@
     @keyframes fadeInUp {
       from {
         opacity: 0;
-        transform: translateY(20px) scale(0.98);
+        transform: translateY(30px);
       }
       to {
         opacity: 1;
-        transform: translateY(0) scale(1);
+        transform: translateY(0);
       }
     }
 
     .animate-fadeInUp {
-      animation: fadeInUp 0.6s ease-out forwards;
+      animation: fadeInUp 0.8s ease-out forwards;
     }
 
-    body {
-      font-family: 'Inter', sans-serif;
+    .floating-label input:focus + label,
+    .floating-label input:not(:placeholder-shown) + label {
+      transform: translateY(-1.5rem) scale(0.85);
+      opacity: 0.8;
     }
   </style>
   <script>
     function handleSignup(event) {
       event.preventDefault();
-      // Simulate success and redirect
       alert("✅ Account created successfully!");
       window.location.href = 'index.html';
     }
@@ -36,41 +37,43 @@
 </head>
 <body class="bg-gradient-to-tr from-sky-50 via-indigo-100 to-purple-100 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900 text-gray-900 dark:text-white min-h-screen flex flex-col">
 
-  <!-- Header -->
-  <header class="sticky top-0 z-50 bg-white/80 dark:bg-gray-900/90 shadow px-6 py-4 backdrop-blur flex justify-between items-center">
-    <h1 class="text-2xl font-bold text-indigo-600 dark:text-indigo-400">FixCity AI</h1>
-    <nav class="space-x-4 text-sm font-medium">
-      <a href="index.html" class="hover:underline">Home</a>
-      <a href="features.html" class="hover:underline">Features</a>
-      <a href="dashboard.html" class="hover:underline">Dashboard</a>
-      <a href="submit.html" class="hover:underline">Submit</a>
-      <a href="community.html" class="hover:underline">Community</a>
-      <a href="login.html" class="text-indigo-600 dark:text-indigo-400 hover:underline">Login</a>
-    </nav>
+  <!-- Header / Navbar -->
+  <header class="sticky top-0 z-50 backdrop-blur bg-white/80 dark:bg-gray-900/90 shadow-md">
+    <div class="max-w-7xl mx-auto px-6 py-4 flex justify-between items-center">
+      <h1 class="text-2xl font-bold text-indigo-600 dark:text-indigo-400">FixCity AI</h1>
+      <nav class="flex gap-4">
+        <a href="index.html" class="bg-white dark:bg-gray-800 hover:scale-105 transition duration-300 px-3 py-2 rounded-md shadow text-sm font-medium hover:text-indigo-600 dark:hover:text-indigo-400">Home</a>
+        <a href="features.html" class="bg-white dark:bg-gray-800 hover:scale-105 transition duration-300 px-3 py-2 rounded-md shadow text-sm font-medium hover:text-indigo-600 dark:hover:text-indigo-400">Features</a>
+        <a href="dashboard.html" class="bg-white dark:bg-gray-800 hover:scale-105 transition duration-300 px-3 py-2 rounded-md shadow text-sm font-medium hover:text-indigo-600 dark:hover:text-indigo-400">Dashboard</a>
+        <a href="submit.html" class="bg-white dark:bg-gray-800 hover:scale-105 transition duration-300 px-3 py-2 rounded-md shadow text-sm font-medium hover:text-indigo-600 dark:hover:text-indigo-400">Submit</a>
+        <a href="community.html" class="bg-white dark:bg-gray-800 hover:scale-105 transition duration-300 px-3 py-2 rounded-md shadow text-sm font-medium hover:text-indigo-600 dark:hover:text-indigo-400">Community</a>
+        <a href="login.html" class="bg-indigo-600 hover:bg-indigo-700 text-white px-4 py-2 rounded-md text-sm font-semibold shadow transition duration-300">Login</a>
+      </nav>
+    </div>
   </header>
 
-  <!-- Main Sign Up Form -->
+  <!-- Sign Up Section -->
   <main class="flex-grow flex items-center justify-center px-6 py-12">
-    <div class="w-full max-w-lg bg-white dark:bg-gray-900 rounded-2xl shadow-xl p-10 animate-fadeInUp">
-      <h2 class="text-3xl font-extrabold text-center text-indigo-700 dark:text-indigo-400 mb-6">Create Your Account</h2>
-      <form class="space-y-5" onsubmit="handleSignup(event)">
-        <div>
-          <label class="block text-sm font-medium mb-1">Full Name</label>
-          <input type="text" required placeholder="John Doe" class="w-full px-4 py-2 rounded-md border border-gray-300 dark:border-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-white focus:ring-2 focus:ring-indigo-500 focus:outline-none transition duration-200" />
+    <div class="w-full max-w-lg animate-fadeInUp bg-white dark:bg-gray-900 p-10 rounded-2xl shadow-xl transform transition duration-500 hover:scale-[1.01]">
+      <h2 class="text-3xl font-extrabold text-center text-indigo-700 dark:text-indigo-400 mb-8">Create Your Account</h2>
+      <form class="space-y-6" onsubmit="handleSignup(event)">
+        <div class="floating-label relative">
+          <input type="text" required placeholder=" " class="peer w-full px-4 py-3 rounded-md border border-gray-300 dark:border-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-white focus:ring-2 focus:ring-indigo-500 focus:outline-none transition duration-200" />
+          <label class="absolute left-4 top-3 text-sm text-gray-500 dark:text-gray-400 transition-all duration-200 peer-focus:text-indigo-500">Full Name</label>
         </div>
-        <div>
-          <label class="block text-sm font-medium mb-1">Email Address</label>
-          <input type="email" required placeholder="you@example.com" class="w-full px-4 py-2 rounded-md border border-gray-300 dark:border-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-white focus:ring-2 focus:ring-indigo-500 focus:outline-none transition duration-200" />
+        <div class="floating-label relative">
+          <input type="email" required placeholder=" " class="peer w-full px-4 py-3 rounded-md border border-gray-300 dark:border-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-white focus:ring-2 focus:ring-indigo-500 focus:outline-none transition duration-200" />
+          <label class="absolute left-4 top-3 text-sm text-gray-500 dark:text-gray-400 transition-all duration-200 peer-focus:text-indigo-500">Email Address</label>
         </div>
-        <div>
-          <label class="block text-sm font-medium mb-1">Password</label>
-          <input type="password" required placeholder="••••••••" class="w-full px-4 py-2 rounded-md border border-gray-300 dark:border-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-white focus:ring-2 focus:ring-indigo-500 focus:outline-none transition duration-200" />
+        <div class="floating-label relative">
+          <input type="password" required placeholder=" " class="peer w-full px-4 py-3 rounded-md border border-gray-300 dark:border-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-white focus:ring-2 focus:ring-indigo-500 focus:outline-none transition duration-200" />
+          <label class="absolute left-4 top-3 text-sm text-gray-500 dark:text-gray-400 transition-all duration-200 peer-focus:text-indigo-500">Password</label>
         </div>
-        <div>
-          <label class="block text-sm font-medium mb-1">Confirm Password</label>
-          <input type="password" required placeholder="••••••••" class="w-full px-4 py-2 rounded-md border border-gray-300 dark:border-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-white focus:ring-2 focus:ring-indigo-500 focus:outline-none transition duration-200" />
+        <div class="floating-label relative">
+          <input type="password" required placeholder=" " class="peer w-full px-4 py-3 rounded-md border border-gray-300 dark:border-gray-700 bg-gray-50 dark:bg-gray-800 dark:text-white focus:ring-2 focus:ring-indigo-500 focus:outline-none transition duration-200" />
+          <label class="absolute left-4 top-3 text-sm text-gray-500 dark:text-gray-400 transition-all duration-200 peer-focus:text-indigo-500">Confirm Password</label>
         </div>
-        <button type="submit" class="w-full py-3 bg-indigo-600 hover:bg-indigo-700 text-white font-semibold rounded-lg shadow-lg transition duration-300">
+        <button type="submit" class="w-full py-3 bg-indigo-600 hover:bg-indigo-700 text-white font-semibold rounded-lg shadow-lg transition duration-300 transform hover:scale-105">
           Sign Up
         </button>
       </form>
@@ -81,8 +84,8 @@
     </div>
   </main>
 
-  <!-- Optional Footer -->
-  <footer class="text-center text-xs text-gray-500 dark:text-gray-600 pb-4 mt-4">
+  <!-- Footer -->
+  <footer class="text-center text-xs text-gray-500 dark:text-gray-600 pb-6 mt-6">
     &copy; 2025 FixCity AI. All rights reserved.
   </footer>
 </body>
