--- a/login.html
+++ b/login.html
@@ -1,42 +1,209 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en" class="dark">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login – FixCity AI</title>
-  <script src="https://cdn.tailwindcss.com"></script>
   <style>
+    :root {
+      --bg-light: #f0f4ff;
+      --bg-dark: #1e1e2f;
+      --text-light: #000;
+      --text-dark: #fff;
+      --card-light: #ffffff;
+      --card-dark: #2c2c3a;
+      --accent: #6366f1;
+    }
+
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to bottom right, var(--bg-light), #dbeafe);
+      color: var(--text-light);
+      transition: all 0.3s ease;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .dark body {
+      background: linear-gradient(to bottom right, var(--bg-dark), #111827);
+      color: var(--text-dark);
+    }
+
+    /* Navbar */
+    header {
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      background-color: rgba(255, 255, 255, 0.95);
+      backdrop-filter: blur(8px);
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+    }
+
+    .dark header {
+      background-color: rgba(30, 30, 47, 0.95);
+    }
+
+    .logo {
+      font-size: 1.8rem;
+      font-weight: bold;
+      color: var(--accent);
+    }
+
+    nav a {
+      margin: 0 0.6rem;
+      text-decoration: none;
+      font-weight: 500;
+      color: inherit;
+      transition: color 0.3s;
+      padding: 4px 10px;
+      border-radius: 6px;
+    }
+
+    nav a:hover,
+    nav a.active {
+      background-color: var(--accent);
+      color: white;
+      text-decoration: none;
+    }
+
+    /* Login Card */
+    .container {
+      flex-grow: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 2rem;
+    }
+
+    .login-box {
+      background-color: var(--card-light);
+      padding: 2rem;
+      border-radius: 1.5rem;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
+      width: 100%;
+      max-width: 400px;
+      animation: fadeIn 0.8s ease-out forwards;
+    }
+
+    .dark .login-box {
+      background-color: var(--card-dark);
+    }
+
+    h2 {
+      text-align: center;
+      font-size: 2rem;
+      color: var(--accent);
+      margin-bottom: 1.5rem;
+    }
+
+    label {
+      font-size: 0.9rem;
+      font-weight: 500;
+      display: block;
+      margin-bottom: 0.5rem;
+    }
+
+    input {
+      width: 100%;
+      padding: 0.7rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      margin-bottom: 1rem;
+      background-color: #f9f9f9;
+    }
+
+    .dark input {
+      background-color: #3a3a50;
+      border-color: #555;
+      color: white;
+    }
+
+    button {
+      width: 100%;
+      padding: 0.7rem;
+      background-color: var(--accent);
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-weight: 600;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: #4f46e5;
+    }
+
+    #error {
+      color: red;
+      font-size: 0.9rem;
+      text-align: center;
+      display: none;
+    }
+
+    .signup-link {
+      text-align: center;
+      font-size: 0.9rem;
+      margin-top: 1rem;
+    }
+
+    .signup-link a {
+      color: var(--accent);
+      text-decoration: none;
+    }
+
+    .signup-link a:hover {
+      text-decoration: underline;
+    }
+
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
-    .animate-fadeIn {
-      animation: fadeIn 0.8s ease-out forwards;
-    }
   </style>
 </head>
-<body class="bg-gradient-to-br from-blue-50 via-purple-100 to-pink-50 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900 text-gray-900 dark:text-white min-h-screen flex items-center justify-center">
+<body>
+  <!-- Navbar -->
+  <header>
+    <div class="logo">FixCity AI</div>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="dashboard.html">Dashboard</a>
+      <a href="submit.html">Submit</a>
+      <a href="blog.html">Blog</a>
+      <a href="community.html">Community</a>
+      <a href="features.html">Features</a>
+      <a href="AIchatbot.html">Chatbot AI</a>
+      <a href="about.html">About</a>
+      <a href="terms.html">Terms</a>
+      <a href="login.html" class="active">Login</a>
+      <a href="signup.html">Sign Up</a>
+    </nav>
+  </header>
 
-  <div class="w-full max-w-md p-8 bg-white dark:bg-gray-800 shadow-2xl rounded-2xl animate-fadeIn">
-    <h2 class="text-3xl font-bold mb-6 text-center text-indigo-600 dark:text-indigo-400">Login to FixCity AI</h2>
-    
-    <form id="loginForm" class="space-y-5">
-      <div>
-        <label for="email" class="block mb-1 text-sm font-medium">Email</label>
-        <input type="email" id="email" required class="w-full px-4 py-2 rounded-lg border border-gray-300 dark:border-gray-700 bg-gray-50 dark:bg-gray-700 text-gray-800 dark:text-white focus:outline-none focus:ring-2 focus:ring-indigo-500" />
-      </div>
-      <div>
-        <label for="password" class="block mb-1 text-sm font-medium">Password</label>
-        <input type="password" id="password" required class="w-full px-4 py-2 rounded-lg border border-gray-300 dark:border-gray-700 bg-gray-50 dark:bg-gray-700 text-gray-800 dark:text-white focus:outline-none focus:ring-2 focus:ring-indigo-500" />
-      </div>
-      <button type="submit" class="w-full py-2 bg-indigo-600 hover:bg-indigo-700 text-white font-semibold rounded-lg transition duration-300">
-        Login
-      </button>
-      <p id="error" class="text-center text-sm mt-2 text-red-500 hidden">❌ Invalid email or password</p>
-      <p class="text-center text-sm mt-4 text-gray-600 dark:text-gray-400">
-        Don't have an account? <a href="#" class="text-indigo-600 hover:underline">Sign up</a>
-      </p>
-    </form>
+  <!-- Login Form -->
+  <div class="container">
+    <div class="login-box">
+      <h2>Login to FixCity AI</h2>
+      <form id="loginForm">
+        <label for="email">Email</label>
+        <input type="email" id="email" required />
+
+        <label for="password">Password</label>
+        <input type="password" id="password" required />
+
+        <button type="submit">Login</button>
+        <p id="error">❌ Invalid email or password</p>
+
+        <p class="signup-link">Don't have an account? <a href="signup.html">Sign up</a></p>
+      </form>
+    </div>
   </div>
 
   <script>
@@ -45,14 +212,13 @@
       const email = document.getElementById("email").value.trim();
       const password = document.getElementById("password").value;
 
-      // Example credentials for demo (replace with backend logic later)
+      // Example credentials
       if (email === "admin@fixcity.com" && password === "1234") {
-        window.location.href = "home.html";
+        window.location.href = "index.html";
       } else {
-        document.getElementById("error").classList.remove("hidden");
+        document.getElementById("error").style.display = "block";
       }
     });
   </script>
-
 </body>
 </html>
